# rpi-wasmcloud-demo

./: .gitignore  .rustfmt.toml  LICENSE  README.md  dagger.cue  docker-compose.yml  main.cue  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.devcontainer/: Dockerfile  devcontainer.json
actor/: Cargo.toml  Makefile  README.md  actor.cue  build.cue  make.mjs  package.json  sign.cue
actor-interfaces/: README.md
actor-interfaces/oled/: Cargo.toml
actor-interfaces/oled/src/: generated.rs
actor-interfaces/oled_ssd1306/: Cargo.toml
actor-interfaces/oled_ssd1306/src/: lib.rs
actor/src/: lib.rs
automation/: Tiltfile  docker-compose.yaml  docker-compose.yml  lib.mjs  macos.mjs  make.mjs  rpi.mjs
automation/manifests/base/: kustomization.yaml  nats-deployment.yaml  nats-service.yaml  registry-deployment.yaml  registry-service.yaml  wasmcloud-deployment.yaml  wasmcloud-service.yaml
automation/manifests/local/: kustomization.yaml  wasmcloud-deployment.yaml
docs/: wasmcloud-lattice.excalidraw  wasmcloud-lattice.json
hello-http/: Cargo.toml
hello-http/src/: lib.rs
hellorunner/: Cargo.toml
hellorunner/src/: main.rs
host_macos/: Cargo.toml
host_macos/src/: main.rs
host_pi/: Cargo.toml
host_pi/src/: main.rs
interface/: Makefile  codegen.toml  interface.cue  make.mjs  oled.smithy  oled_ssd_1306.smithy  package.json
interface/rust/: Cargo.toml
interface/rust/src/: lib.rs  oled.rs  oled_ssd_1306.rs
mac_host/: Cargo.toml  Makefile  manifest.yaml
mac_host/src/: main.rs
manifests/: pi-01.yaml  pi-02.yaml
oled-ssd1306/: Cargo.toml  README.md  codegen.yaml
oled-ssd1306/schemas/: core.widl
oled-ssd1306/src/: lib.rs
oled_actor/: Cargo.toml  Makefile  README.md
oled_actor/src/: lib.rs
oled_provider/: Cargo.toml  codegen.yaml
oled_provider/src/: lib.rs
oled_provider_interface/: Cargo.toml  Makefile  codegen.yaml
oled_provider_interface/src/: lib.rs
oled_ssd1306/: Cargo.toml  Makefile  README.md
oled_ssd1306/interface/: codegen.toml
oled_ssd1306/interface/rust/src/: oled_ssd_1306.rs
oled_ssd1306/oled-ssd1306-interface/: Cargo.toml  README.md  schema.widl
oled_ssd1306/oled-ssd1306-interface/src/: generated.rs  lib.rs
oled_ssd1306/oled-ssd1306-provider/: Cargo.toml
oled_ssd1306/oled-ssd1306-provider/src/: display.rs  lib.rs  say.rs
oled_ssd1306/oled_ssd1306_interface/: Cargo.toml  README.md  codegen.yaml
oled_ssd1306/oled_ssd1306_interface/src/: lib.rs
oled_ssd1306/oled_ssd1306_provider/: Cargo.toml
oled_ssd1306/oled_ssd1306_provider/src/: lib.rs
oled_ssd1306/src/: main.rs
pi_host/: Cargo.toml  Makefile
pi_host/src/: main.rs
pi_oled_provider/: .gitignore  Cargo.toml
pi_oled_provider/schemas/: oled_provider.widl
pi_oled_provider/src/: lib.rs
provider/: Cargo.toml  Makefile  README.md  build.cue  make.mjs  package.json  provider.cue  provider.mk  provider_test_config.toml
provider/src/: display.rs  main.rs
provider/tests/: oled-test.rs
runner/: Cargo.toml
runner/src/: main.rs
scripts/: start.sh
wasm_oled_actor/: Cargo.toml  Makefile  README.md
wasm_oled_actor/src/: lib.rs
