[package]
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2021"
name = "oled_actor"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "oled_actor"

[dependencies]
async-trait = "0.1.53"
futures = "0.3.21"
oled-interface = {path = "../interface/rust"}
once_cell = "1.12.0"
wasmbus-rpc = "0.8.5"
wasmcloud-interface-httpserver = "0.5.0"
wasmcloud-interface-logging = "0.5.0"
wasmcloud-interface-numbergen = "0.5.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
