[package]
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"
name = "macos_host"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.2"
wascc-host = {version = "0.14.0", features = ["lattice"]}
wascc-httpsrv = {version = "0.8.1", features = ["static_plugin"]}
