[package]
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"
name = "oled_actor"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
log = "0.4.14"
oled-ssd1306-interface = {path = "../oled_ssd1306/oled-ssd1306-interface", features = ["guest"]}
wapc-guest = "0.4.0"
wasmcloud-actor-core = {version = "0.2.2", features = ["guest"]}
wasmcloud-actor-extras = {version = "0.1.1", features = ["guest"]}
wasmcloud-actor-http-server = {version = "0.1.1", features = ["guest"]}
wasmcloud-actor-logging = {version = "0.1.1", features = ["guest"]}

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
