[package]
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"
name = "oled_actor"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "oled_actor"

[dependencies]
async-trait = "0.1"
async_once = "0.2.1"
form_urlencoded = "1.0"
futures = "0.3"
lazy_static = "1.4.0"
oled-ssd1306-interface = {path = "../oled_ssd1306/interface/rust"}
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
serde_json = "1.0.68"
wasmbus-rpc = "0.4"
wasmcloud-interface-httpserver = "0.1"
wasmcloud-interface-logging = "0.1"
wasmcloud-interface-numbergen = "0.1"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
