[package]
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"
name = "oled_provider_interface"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = {version = "0.4.11", features = ["std", "serde"]}
rmp-serde = "0.15.0"
serde = {version = "1.0.118", features = ["derive"]}
wapc-guest = "0.4.0"
