[package]
edition = "2018"
license = "MIT"
name = "oled-ssd1306-provider"
resolver = "2"
version = "0.1.0"

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
embedded-graphics = "0.7.1"
embedded-text = "0.5.0"
futures = "0.3.17"
log = "0.4.14"
oled-ssd1306-interface = {path = "../interface/rust"}
ssd1306 = "0.7.0"
wasmbus-rpc = "0.4.4"

[target.'cfg(target_arch = "aarch64")'.dependencies]
linux-embedded-hal = "0.3.1"

[[bin]]
name = "oled-ssd1306-provider"
path = "src/main.rs"
