[package]
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"
name = "wasm_oled_actor"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
actor-core = {git = "https://github.com/wascc/actor-interfaces", branch = "main"}
actor-http-server = {git = "https://github.com/wascc/actor-interfaces", branch = "main"}
oled_provider_interface = {path = "../oled_provider_interface"}
wapc-guest = "0.4.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
