[package]
authors = ["stuart.harris@red-badger.com"]
description = "Interface library for the oled-ssd1306 capability, "
edition = "2021"
license = "MIT"
name = "oled-ssd1306-interface"
version = "0.1.0"

# when publishing to crates.io, freeze src by omitting build.rs
exclude = ["build.rs"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
async-trait = "0.1.51"
futures = "0.3.18"
serde = {version = "1.0.130", features = ["derive"]}
serde_bytes = "0.11.5"
serde_json = "1.0.72"
wasmbus-rpc = "0.6.0"

[dev-dependencies]
base64 = "0.13.0"

# build-dependencies needed for build.rs
[build-dependencies]
weld-codegen = "0.2.3"
