[package]
authors = ["stuart.harris@red-badger.com"]
description = "Interface library for the oled capability, "
edition = "2021"
license = "MIT"
name = "oled-interface"
version = "0.0.1"

# when publishing to crates.io, freeze src by omitting build.rs
exclude = ["build.rs"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
async-trait = "0.1.52"
futures = "0.3.19"
serde = {version = "1.0.136", features = ["derive"]}
serde_bytes = "0.11.5"
serde_json = "1.0.78"
wasmbus-rpc = "0.6.1"

[dev-dependencies]
base64 = "0.13.0"

# build-dependencies needed for build.rs
[build-dependencies]
weld-codegen = "0.2.4"
