[package]
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
description = "OLED provider for ssd1306"
edition = "2018"
license = "MIT"
name = "oled-ssd1306-provider"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enable if the provider will be statically compiled into a host
static_plugin = []

[dependencies]
anyhow = "1.0.41"
embedded-graphics = "0.7.1"
embedded-text = "0.5.0-beta.1"
env_logger = "0.8.3"
linux-embedded-hal = "0.3.0"
log = "0.4.14"
machine-ip = "0.2.1"
oled-ssd1306-interface = {path = "../oled-ssd1306-interface"}
ssd1306 = {git = "https://github.com/jamwaffles/ssd1306"}
wasmcloud-actor-core = "0.2.3"
wasmcloud-provider-core = "0.1.1"
