[package]
authors = ["stuart.harris@red-badger.com"]
description = "Actor interface for OLED provider"
edition = "2018"
license = "MIT"
name = "oled_ssd1306_interface"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
log = {version = "0.4.14", features = ["std", "serde"]}
rmp-serde = "0.15.4"
serde = {version = "1.0.123", features = ["derive"]}
serde_bytes = "0.11.5"
serde_derive = "1.0.123"
serde_json = "1.0.62"
wapc-guest = "0.4.0"

[dev-dependencies]
base64 = "0.13.0"
serde_json = "1.0.62"
structopt = "0.3.21"
